# omnigraph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assembly_benchmark.md  bak_workflow.md  benchmark_index.cpp  cDBG_labeling.cpp  config.ini  cpp_build.md  data_preparation.sh  dbg_kmersColoring.cpp  env.yml  first_query.cpp  fullpipeline.sh  indexing.py  job_cDBG75_analysis.sh  job_fistQuery.sh  job_gfaDislinkage.sh  job_originalCompsIndexing.sh  job_secondQuery.sh  kProcessor_bigkmer.cpp  main.cpp  manual_indexing.cpp  miscellaneous_stats.md  omp_primary_partitioning_single.cpp  phmapHeavyTest.cpp  primary_partitioning.cpp  primary_partitioning_single.cpp  query.py  second_query.cpp  single_query.cpp  six_GFAs_analysis.md  workflow.md  workflow_k31.md  workflow_k75.md
batchQuery_trial/: batch_query.py  query.py  scoring.ipynb
data/: bcalm_job.sh
includes/: coloredKmers.hpp  firstQuery.hpp  omnigraph.hpp  sqliteManager.hpp
lib/progressBar2/: ProgressBar.hpp
lib/sqlite3pp/: sqlite3pp.h
logs/: 1.1_cDBG_log.txt
scripts/: collectiveComps_indexing.py  construct_finalComponents.py  dump_finalComps.py  find_complexNode.py  fix_unitigs_edges.py  gfa_to_connected_components.py  originalCompsIndexing.py  splitted_collective_CompsIndexing.py  sqlite_insert_components.py  unitigs_dislinkage.py  unitigs_edges_histogram.py  unitigs_to_connected_components.py  unitigs_to_gephi.py  unitigs_to_names_tsv.py  unitigs_to_original_kpNames.py  unitigs_to_viz_kmersHistograms.py
scripts/cached/: dump_finalComps.py
scripts/misc/: column_histogram.py
scripts/misc/analyse_final_components/: analyse_final_components.ipynb  comp1_to_count.pickle  comp2_to_count.pickle
scripts/mysql_scripts/: create_unitigs_tracking.sql  test_insertion.py
slurm_jobs/: job_cDBG75_analysis.sh  job_fistQuery.sh  job_kProcessor_first_index.sh  job_secondQuery.sh
slurm_jobs/experiments/largest_component/: job_dumpingLargestComponent.sh
slurm_jobs/job_cDBG75_analysis/: job_cDBG75_aggressive_analysis_0.895.sh  job_cDBG75_aggressive_analysis_0.95.sh  job_cDBG75_aggressive_analysis_0.97.sh  job_cDBG75_aggressive_analysis_0.985.sh  job_cDBG75_analysis_0.895.sh  job_cDBG75_analysis_0.95.sh  job_cDBG75_analysis_0.97.sh  job_cDBG75_analysis_0.99.sh  job_cDBG75_mild_analysis_0.95.sh  job_cDBG75_mild_analysis_0.97.sh  job_cDBG75_mild_analysis_0.985.sh  job_cDBG75_original_analysis_0.895.sh  job_cDBG75_original_analysis_0.95.sh  job_cDBG75_original_analysis_0.97.sh  job_original_cDBG_fullAnalysis.sh
slurm_jobs/jobs_assembly/: job_cutoff1_aggressive_partitions_rnaspades.sh  job_cutoff1_merged_rnaQuast_rnaspades.sh  job_cutoff1_merged_rnaspades.sh  job_cutoff1_merged_trinity.sh  job_rawReads_rnaQuast.sh  job_rawReads_rnaspades.sh
slurm_jobs/jobs_cDBG_matching_stats/: job_aggressive_cDBG75.sh  job_mild_cDBG75.sh  job_original_cDBG75.sh  job_reducedAggressive_cDBG75.sh  job_reducedMild_cDBG75.sh  job_reducedOriginal_cDBG75.sh
slurm_jobs/jobs_cDBG_matching_stats/less_IO/: job_mild_cDBG75.sh
slurm_jobs/jobs_kmersColoring/: job_6GFAs_labeling.sh  job_original_cDBG_coloring.sh
slurm_jobs/jobs_singlePartioning/: cached_job_dumpingPartioning_aggressive.sh  job_dumpingPartioning_aggressive.sh  job_singlePartioning_aggressive.sh  job_singlePartioning_reducedAggressive.sh
src/: coloredKmers.cpp  config.ini  firstQuery.cpp  gfa_to_connected_components.py  mySQL_insert_components.py  omnigraph.cpp  originalComponentsToCollectiveComponents.py  sqliteManager.cpp  sqlite_insert_components.py  unitigs_to_collective_kpNames.py
src/cpp/: CMakeLists.txt  main.cpp
src/mysql_scripts/: create_PEReads.sql
src/mysql_scripts.py/: test_mysql.py
tmp_slurm/missing_stats/: missing_stats.sh
unused_code/: coloredKmers.hpp
